changed home to index to deploy on github pages

--- a/templates/assistant.html
+++ b/templates/assistant.html
@@ -11,9 +11,9 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="{{ url_for('home') }}" class="nav-logo">🍳 Cooking Helper</a>
+      <a href="{{ url_for('index') }}" class="nav-logo">🍳 Cooking Helper</a>
       <ul class="nav-links">
-        <li><a href="{{ url_for('home') }}">Home</a></li>
+        <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="{{ url_for('assistant') }}" class="active">Assistant</a></li>
         <li><a href="{{ url_for('community') }}">Community</a></li>
       </ul>
